documentation and ProxyHandler

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ version = attr: messageit.__version__
 
 description = Message (Command and Event) passing for Python
 long_description = file: README.md
+long_description_content_type = text/markdown
 url=https://github.com/ivangeorgiev/messageit
 
 author=Ivan Georgiev
